exports[`(.not).toHaveProxyAuthenticationRequiredStatus > using axios > .not.toHaveProxyAuthenticationRequiredStatus > fails when response have status code 407 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveProxyAuthenticationRequiredStatus()</intensity>

Expected status code to not be 407 received:
  <red>407</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 407,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveProxyAuthenticationRequiredStatus > using axios > .toHaveProxyAuthenticationRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveProxyAuthenticationRequiredStatus()</intensity>

Expected status code to be 407 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveProxyAuthenticationRequiredStatus > using got > .not.toHaveProxyAuthenticationRequiredStatus > fails when response have status code 407 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveProxyAuthenticationRequiredStatus()</intensity>

Expected status code to not be 407 received:
  <red>407</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 407,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveProxyAuthenticationRequiredStatus > using got > .toHaveProxyAuthenticationRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveProxyAuthenticationRequiredStatus()</intensity>

Expected status code to be 407 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
